--- a/produkter.html
+++ b/produkter.html
@@ -6,4 +6,9 @@
     <title>Document</title>
   </head>
   <body><header>header</header></body>
+  <body>
+    <footer>
+      <p>Dette er footer indholdet.</p>
+    </footer>
+  </body>
 </html>
